# pml2023

./: .gitignore  pyproject.toml
assignment2/e1/: e1.py  e2.py
assignment2/e2/: e4.py
assignment2/e2/.ipynb_checkpoints/: e2-checkpoint.ipynb
assignment3/: Week 2 PPCA.ipynb  diffusion.ipynb  e1.ipynb  e3-cbvae.ipynb  e3-vae.ipynb  functions.py  gp_mauna_loa.py
e1/: pyproject.toml  sus.py
e2/: Pyro_sampling_NUTS_PML23.ipynb  e1_and_3_Pyro_sampling_NUTS_PML23.ipynb  e2.ipynb  e2.py
e2/.ipynb_checkpoints/: e1-checkpoint.py
exam/: A.CBVAE.ipynb  A.LadderVAE.ipynb  A.VAE.ipynb  A.betaVAE.ipynb  LadderVAE.py  b.py  b_.py  functions.py
exam/.ipynb_checkpoints/: A.CBVAE-checkpoint.ipynb  A.LadderVAE-checkpoint.ipynb  A.VAE-checkpoint.ipynb  A.betaVAE-checkpoint.ipynb
exam/MNISTDiffusion/: Diffusion.ipynb
exam/MNISTDiffusion/.ipynb_checkpoints/: Diffusion-checkpoint.ipynb
exam/other_diffusion_models/Denoising_Diffusion_Probabilistic_Models/: Untitled.ipynb  diffusion_models.py
exam/other_diffusion_models/Denoising_Diffusion_Probabilistic_Models/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
exam/other_diffusion_models/pytorch-diffusion-master/: entry.ipynb
